unpackaged/main/default/objects/pse__Jira_Work_Log__c/pse__Jira_Work_Log__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__JiraWorkLogHelp</customHelpPage>
    <description>Stores work logs synced from Jira if the synchronization of Jira work logs with PSA timecards is enabled. The records are used to keep timecards created from Jira work logs up to date.</description>
    <label>Jira Work Log</label>
    <nameField>
        <label>Work Log ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>