unpackaged/main/default/objects/pse__Jira_Work_Log__c/fields/pse__Comment__c.field-meta.xml
<CustomField>
    <fullName>pse__Comment__c</fullName>
    <description>Description of the work log from Jira.</description>
    <inlineHelpText>Description of the work log from Jira.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>