unpackaged/main/default/objects/pse__Jira_Work_Log__c/fields/pse__Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Key__c</fullName>
    <description>Key of the issue the work log was created against in Jira.</description>
    <inlineHelpText>Key of the issue the work log was created against in Jira.</inlineHelpText>
    <label>Issue Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>