unpackaged/main/default/objects/pse__Jira_Work_Log__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>Work log started date from Jira.</description>
    <inlineHelpText>Work log started date from Jira.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>