unpackaged/main/default/objects/pse__Jira_Work_Log__c/fields/pse__Task_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related task time record.</description>
    <inlineHelpText>Task time record this work log is included in.</inlineHelpText>
    <label>Task Time</label>
    <referenceTo>pse__Task_Time__c</referenceTo>
    <relationshipLabel>Jira Work Logs</relationshipLabel>
    <relationshipName>Jira_Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>