unpackaged/main/default/objects/pse__Jira_Work_Log__c/fields/pse__Time_Spent_Seconds__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Spent_Seconds__c</fullName>
    <description>Amount of time logged in Jira, in seconds.</description>
    <inlineHelpText>Amount of time logged in Jira, in seconds.</inlineHelpText>
    <label>Time Spent (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>